# version

./: CMakeLists.txt  main.cpp  print.cpp  print.h  readme.md  version_info.cpp  version_info.cpp.in  version_info.h
clipboard/: CMakeLists.txt  add_to_startup.h  watch_clipboard.cpp  watch_clipboard.h
